--- a/en.html
+++ b/en.html
@@ -10,8 +10,8 @@
 <body>
     <div class="select">
         <select class="en">
-            <option value="en.html">en</option>
-            <option value="ru.html">ru</option>
+            <option value="https://iamnotapr.github.io/cardForm/en.html">en</option>
+            <option value="https://iamnotapr.github.io/cardForm/ru.html">ru</option>
         </select>
     </div>
     <!--<span class="icp-nav-us"></span>-->
