--- a/en.html
+++ b/en.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="js/index.css">
 </head>
 <body>
-    <div class="select">
-        <select class="en">
-            <option value="https://iamnotapr.github.io/cardForm/en.html">en</option>
-            <option value="https://iamnotapr.github.io/cardForm/ru.html">ru</option>
-        </select>
+    <div class="ru-v">
+        <a href="https://iamnotapr.github.io/cardForm/ru.html">
+            <span class="ru-flag"title="ru-version"></span>
+        </a>
+        <a href="#">
+            <span class="us-flag" title="en-version"></span>
+            <span class="us-flagT"></span>  
+        </a>
     </div>
     <!--<span class="icp-nav-us"></span>-->
 
