--- a/ru.html
+++ b/ru.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="js/index.css">
 </head>
 <body>
-    <div class="select">
-        <select class="en">
-            <option value="https://iamnotapr.github.io/cardForm/ru.html">ru</option>
-            <option value="https://iamnotapr.github.io/cardForm/en.html">en</option>
-        </select>
-    </div>
+        <div class="ru-v">
+            <a href="#">
+                <span class="ru-flag" title="ru-версия"></span>
+            </a>
+            <a href="https://iamnotapr.github.io/cardForm/ru.html">
+                <span class="us-flag" title="en-version"></span>
+                <span class="us-flagT"></span>  
+            </a>
+        </div>
     <!--<span class="icp-nav-us"></span>-->
 
     <!--form Card holder-->
