--- a/ru.html
+++ b/ru.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="js/index.css">
 </head>
 <body>
-        <div class="ru-v">
-            <a href="#">
-                <span class="ru-flag" title="ru-версия"></span>
-            </a>
-            <a href="https://iamnotapr.github.io/cardForm/ru.html">
-                <span class="us-flag" title="en-version"></span>
-                <span class="us-flagT"></span>  
-            </a>
-        </div>
+    <div class="ru-v">
+        <a href="#">
+            <span class="ru-flag"title="ru-version"></span>
+        </a>
+        <a href="https://iamnotapr.github.io/cardForm/en.html">
+            <span class="us-flag" title="en-version"></span>
+            <span class="us-flagT"></span>  
+        </a>
+    </div>
     <!--<span class="icp-nav-us"></span>-->
 
     <!--form Card holder-->
-    <form method="POST" action="enter your action...">
+    <form method="POST" action="">              <!--enter your action...-->
         <div class="card-form">
             <div class="logo">
                 <label>visa</label>
@@ -31,8 +31,8 @@
                 <input class="card-number" maxlength="18" required/>
             </div>
             <div class="holder">
-                <label class="card-holder-word">Имя держателя карты</label>
-                <input class="card-holder" maxlength="58" name="cardHold" type="text" required/>
+                <label class="card-holder-word">Держатель карты</label>
+                <input class="card-holder" maxlength="58" name="cardHold" required/>
             </div>
             <div class="secure">
                 <label class="cvv-word">CVV</label>
