--- a/map.html
+++ b/map.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>DELTA</title>
     <style>
-        .div-head{position: absolute;top:0px;width: 100%;background: rgb(121, 121, 121);height: 50px;left: 0;}
-        .map-place{padding: 40px 0;text-align: center;}.div-container{position: absolute;top:50px;left: 0;margin: 0;max-width: 1000px;}
+        .div-head{position: absolute;top:0px;width: 100%;background: rgb(121, 121, 121);height: 50px;left: 0;z-index: 99;}
+        .map-place{padding: 40px 0;text-align: center;}.div-container{position: absolute;top:-9px;left: -3;margin: 0;max-width: 1000px;}
         .logo{position: absolute;top:10px;left: 50px;color: white;font-size: 20px;}.coordinate{position: absolute;top:10px;left:400px;color: white;font-size: 20px;text-decoration: underline tomato;}
         .dip-map{display: none;}
         @media screen and (max-width:635px) {
@@ -34,7 +34,7 @@
                     <!--map-->
                     <!--width="1487" height="693"-->
                     <!--width="770" height="1493"-->
-                    <iframe src="https://www.google.com/maps/d/embed?mid=1VwfoA5WMqNjtssT5qlH6H0qrRYrujPI&ehbc=2E312F" width="1487" height="693" class="pc-map"></iframe>
+                    <iframe src="https://www.google.com/maps/d/embed?mid=1VwfoA5WMqNjtssT5qlH6H0qrRYrujPI&ehbc=2E312F" width="1487" height="753" class="pc-map"></iframe>
                     <iframe src="https://www.google.com/maps/d/embed?mid=1VwfoA5WMqNjtssT5qlH6H0qrRYrujPI&ehbc=2E312F" width="305" height="635" class="dip-map"></iframe>
                 </div>
             </section>
